Builfing from scratch. Using pre-used libraries

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
+build_flags = -I include
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+    arduino-libraries/NTPClient@^3.2.1
+    me-no-dev/ESPAsyncTCP@^1.2.2
+	bblanchon/ArduinoJson@^7.0.4
